[tool.poetry]
name = "telegrambot-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.7.1"
pip = "^22.3.1"
pyTelegramBotAPI = "^4.9.0"
pymongo = "^4.3.3"
schedule = "^1.1.0"
bcrypt = "^4.0.1"
python-telegram-bot = "^20.0"
telegram = "^0.0.1"
pandas = "^1.5.3"
sklearn = "^0.0.post2"
nltk = "^3.8.1"
translate = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
